# template-data-package

./: .copier-answers.yml  .cz.toml  .editorconfig  .gitignore  .pre-commit-config.yaml  .rumdl.toml  .typos.toml  404.qmd  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE.md  README.md  README.qmd  _metadata.yml  _publish.yml  _quarto.yml  copier.yaml  copier.yml  index.qmd  justfile  main.py  pyproject.toml  pyproject.toml.jinja  test-template.sh
.config/: cliff.toml  typos.toml
.github/: CODEOWNERS  pull_request_template.md  sync.yml
.github/workflows/: add-to-project.yml  build-website.yml  checks.yml  release.yml  sync-files.yml  test.yml
data-raw/: .gitignore
docs/: guide.qmd
docs/guide/: create-data-package.qmd  develop-data-package.qmd  develop.qmd  index.qmd  installing.qmd  justfile.qmd  next-steps.qmd  updating.qmd  using.qmd
docs/includes/: _badges.qmd  _contributors.qmd  site-counter.html
scripts/: __init__.py  properties.py
template/: .cz.toml  .flower.toml  .gitignore  .pre-commit-config.yaml  .rumdl.toml  .typos.toml  CITATION.cff.jinja  CONTRIBUTING.md.jinja  LICENSE-CC-BY-4.0.md  LICENSE-MIT.md.jinja  LICENSE.md.jinja  README.md.jinja  README.qmd  README.qmd.jinja  TODO.md.jinja  _quarto.yml.jinja  index.qmd  justfile  justfile.jinja  main.py  pyproject.toml.jinja  ruff.toml  {% if cc0_license %}LICENSE.md{% endif %}.jinja
template/.config/: cliff.toml  cog.toml  ruff.toml  rumdl.toml  typos.toml
template/.github/: CODEOWNERS.jinja  pull_request_template.md
template/.github/workflows/: add-to-project.yml.jinja  build-website.yml.jinja  checks.yml  release-package.yml  release.yml  update-from-template.yml
template/docs/: README.md
template/docs/includes/: _badges.qmd
template/scripts/: __init__.py  properties.py
tools/: get-contributors.sh
