[tool.poetry]
name = "template-example-repo"
version = "0.0.1"
description = ""
authors = [
  "Luke W. Johnston <lwjohnst@gmail.com>",
  "Kristiane Beicher <kris.beicher@clin.au.dk>",
]
maintainers = [
  "Luke W. Johnston <lwjohnst@gmail.com>",
  "Kristiane Beicher <kris.beicher@clin.au.dk>",
]
readme = "README.md"
repository = "https://github.com/seedcase-project/template-example-repo"  
license = "MIT"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/seedcase-project/template-example-repo/issues"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.24.0"
pyjanitor = "^0.30.0"
seedcase-sprout = {git = "https://github.com/seedcase-project/seedcase-sprout.git"}

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

