[project]
name = "template-data-package"
version = "0.1.0"
description = "A template for structuring all the pieces for a data package."
authors = [
  {name = "Luke W. Johnston", email = "lwjohnst@gmail.com" },
  {name = "Kristiane Beicher", email = "kris.beicher@clin.au.dk" },
]
maintainers = [
  {name = "Luke W. Johnston", email = "lwjohnst@gmail.com" },
  {name = "Kristiane Beicher", email = "kris.beicher@clin.au.dk" },
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]
requires-python = ">=3.12"
dependencies = [
    "polars>=1.27.0",
    "pyjanitor>=0.31.0",
    "seedcase-sprout",
]

[project.urls]
issues = "https://github.com/seedcase-project/REPO/issues"
repository = "https://github.com/seedcase-project/REPO"

[dependency-groups]
dev = [
    "commitizen>=4.5.1",
    "pre-commit>=4.2.0",
    "ruff>=0.11.4",
    "typos>=1.32.0",
]

[tool.uv.sources]
seedcase-sprout = { git = "https://github.com/seedcase-project/seedcase-sprout" }
